[bugfix/content] sidebar feed Headlines with long text didn't collapsed

--- a/www/css/less/startpage.less
+++ b/www/css/less/startpage.less
@@ -116,6 +116,13 @@
 			.headline {
 				font-size:   18px;
 				font-weight: bold;
+
+				a {
+					display: block;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+				}
 			}
 
 			.author {
